--- a/src/main/resources/templates/admin/series/add-episode-form.html
+++ b/src/main/resources/templates/admin/series/add-episode-form.html
@@ -31,6 +31,10 @@
                         <td><input class="text-input-style" type="text" name="mediaUrl" th:field="*{mediaUrl}" placeholder="URL mediów" required></td>
                     </tr>
                     <tr>
+                        <td><input class="text-input-style" type="text" name="mediaUrl" th:field="*{imageUrl}" placeholder="Wpisz adres URL zdjęcia epizodu"
+                                   required></td>
+                    </tr>
+                    <tr>
                         <td><input class="text-input-style" type="number" name="durationMinutes" th:field="*{durationMinutes}" placeholder="Czas trwania (minuty)" required></td>
                     </tr>
                     <tr>
