--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -4,7 +4,7 @@
   <div class="Footer-module-lower-ieG8u">
     <section itemtype="">
       <div class="Scaffold-module-scaffold-F6aIC">
-        <span class="Footer-module-copyright-myMzS">© 2023 Viaplay Group Sweden AB (org.no: 556304-7041). All rights reserved.</span>
+        <span class="Footer-module-copyright-myMzS">© 2023 Cineflix inc. All rights reserved.</span>
       </div>
     </section>
   </div>
