--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -8,7 +8,7 @@
         <span>
           <div class="HeaderLogo-module-headerLogo-lWX4m">
             <a class="HeaderLogo-module-link-kdP1e" href="/">
-              <img src="https://viaplay-web-frontend-assets.mtg-api.com/frontend-2023092141850/images/header-logo.png"
+              <img th:src="@{/images/cineflix.png}"
                    alt="Viaplay Start logo"
                    class="Logo-module-logo-pfYdr">
             </a>
