--- a/src/main/resources/templates/admin/series/add-series-api.html
+++ b/src/main/resources/templates/admin/series/add-series-api.html
@@ -13,7 +13,7 @@
     <div id="content" class="admin-panel">
         <div th:replace="~{admin/sidebar :: sidebar}"></div>
         <div class="main-content">
-            <form th:action="@{/add-series-api}" method="post" th:object="${series}">
+            <form th:action="@{/admin/add-series-api}" method="post" th:object="${series}">
                 <div th:if="${error}" th:text="${error}" class="alert alert-danger"></div>
                 <div class="api-grid-container">
                     <tr>
