--- a/src/main/resources/templates/admin/series/manage-seasons.html
+++ b/src/main/resources/templates/admin/series/manage-seasons.html
@@ -47,7 +47,7 @@
                         <td th:text="${epizode.durationMinutes}">Description</td>
                         <td th:text="${epizode.episodeDescription}">Staff</td>
                         <td>
-                            <a th:href="@{'/edit-episode/' + ${epizode.id}}" title="Edytuj" th:text="Edytuj"></a>
+                            <a th:href="@{'/admin/edit-episode/' + ${epizode.id}}" title="Edytuj" th:text="Edytuj"></a>
                             <a href="#" title="Usuń" th:text="Usuń" id="deleteEpisode" th:onclick="showConfirmDialog()" th:attr="data-id=${epizode.id}"></a>
                         </td>
                     </tr>
@@ -70,7 +70,7 @@
     function submitForm(confirmAction) {
         if (confirmAction === 'deleteEpisode') {
             var episodeId = document.getElementById("action").value;
-            window.location.href = '/delete-episode/' + episodeId + '?action=deleteEpisode';
+            window.location.href = '/admin/delete-episode/' + episodeId + '?action=deleteEpisode';
         } else {
             document.getElementById("customDialogOverlay").classList.remove("custom-dialog-shown");
         }
