--- a/src/main/resources/templates/admin/sidebar.html
+++ b/src/main/resources/templates/admin/sidebar.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<html xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <aside th:fragment="sidebar" class="Admin-sidebar">
     <ul class="DropDownUserMenu-module-dropdownList--L-em">
@@ -9,9 +10,9 @@
                             Filmy
                         </span>
                 <ul class="sub-menu">
-                    <li><a th:href="@{/add-movie-api}">Dodaj film API</a></li>
-                    <li><a th:href="@{/add-movie-form}">Dodaj film ręcznie </a></li>
-                    <li><a th:href="@{/manage-movies}">Zarządzaj filmami</a></li>
+                    <li><a th:href="@{/admin/add-movie-api}">Dodaj film API</a></li>
+                    <li><a th:href="@{/admin/add-movie-form}">Dodaj film ręcznie </a></li>
+                    <li><a th:href="@{/admin/manage-movies}">Zarządzaj filmami</a></li>
                 </ul>
             </li>
         </ul>
@@ -21,19 +22,19 @@
                     Seriale
                 </span>
                 <ul class="sub-menu">
-                    <li><a th:href="@{/add-series-api}">Dodaj serial API</a></li>
-                    <li><a th:href="@{/add-series-form}">Dodaj serial ręcznie </a></li>
-                    <li><a th:href="@{/manage-series}">Zarządzaj serialami</a></li>
+                    <li><a th:href="@{/admin/add-series-api}">Dodaj serial API</a></li>
+                    <li><a th:href="@{/admin/add-series-form}">Dodaj serial ręcznie </a></li>
+                    <li><a th:href="@{/admin/manage-series}">Zarządzaj serialami</a></li>
                 </ul>
             </li>
         </ul>
         <ul>
-            <li>
+            <li sec:authorize="hasRole('ADMIN')">
                 <span class="NavigationItem-module-item-vXU-- NavigationItem-module-compact--avrA NavigationItem-module-watched-mwewA">
                     Użytkownicy
                 </span>
                 <ul class="sub-menu">
-                    <li><a th:href="@{/manage-users}">Zarządzaj użytkownikami</a></li>
+                    <li><a th:href="@{/master/manage-users}">Zarządzaj użytkownikami</a></li>
                 </ul>
             </li>
         </ul>
